--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,41 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+<ion-header>
+  <ion-toolbar class="custom-toolbar">
+    <ion-title>JK Sabonetes Artesanais</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <h2>Bem-vindo ao App</h2>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Tema</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      Aplicativo chamado <strong>JK Sabonetes Artesanais</strong>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Objetivo</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      Criar um app para mostrar produtos artesanais (sabonetes), com layout bonito e informações atualizadas.
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Integrantes</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ul>
+        <li>Jaqueline</li>
+        <li>Natasha</li>
+        <li>Lincoln</li>
+	      <li>Luis Eduardo</li>
+      </ul>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
